# dlops_energy_forecasting_with_MLflow

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  dockerignore  fastapi_app.py  flask_app.py  main.py  mlflow.db  params.yaml  pyproject.toml  schema.yaml  streamlit_app.py  template.py
.github/workflows/: cicd.yml
artifacts/data_transformation/: preprocessor.pkl
artifacts/model_evaluation/: metrics.json
artifacts/model_trainer/: best_model_info.pkl  model.h5
artifacts/model_trainer/keras_tuner/gru_tuning/: oracle.json
artifacts/model_trainer/keras_tuner/gru_tuning/trial_00/: checkpoint.weights.h5  trial.json
artifacts/model_trainer/keras_tuner/gru_tuning/trial_01/: checkpoint.weights.h5  trial.json
artifacts/model_trainer/keras_tuner/lstm_tuning/: oracle.json
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_trainer.ipynb  05_model_evalution.ipynb
src/dlProject_energy_demand_forcasting/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/dlProject_energy_demand_forcasting/config/: configuration.py
src/dlProject_energy_demand_forcasting/entity/: config_entity.py
src/dlProject_energy_demand_forcasting/pipeline/: prediction_pipeline.py  stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
src/dlProject_energy_demand_forcasting/utils/: exception.py  logger.py  utils.py
static/: index.html
(+40 files in other folders)
