[project]
name = "dlops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "hydra-core>=1.3.2",
    "mlflow>=3.11.1",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pydantic>=2.13.2",
    "pytorch-lightning>=2.6.1",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "uvicorn>=0.44.0",
    "wandb>=0.26.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.6",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
